# finance-data-mcp

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  entrypoint.sh  mcp_server.py  mcp_server_all_tools.py  pyproject.toml  ray_vllm.py  server.py  settings.py
dataloader/: __init__.py  chunker.py  embd_env.py  vector_store.py
earnings_transcripts/: transcripts.py
filings/: __init__.py  sec_data.py  utils.py
finance_data/: __init__.py  api.py  app.py  cli.py  settings.py
finance_data/common/: processed_data_index.py
finance_data/dataloader/: pipeline.py  text_splitter.py  vector_store.py
finance_data/earnings_transcripts/: __init__.py  base.py  transcripts.py
finance_data/ocr/: olmocr_ray_pipeline.py
finance_data/server_api/: models.py
ocr/: olmocr_pipeline.py  run_ocr.py
